* Intercept line plotting in `sjp.int` for `type = "cond"` was removed.
* Line geoms for `type = "cond"` in `sjp.int` now always start at y-position zero, to better indicate the effective change of interaction effect compared to base reference. Now, the y-position indicates the change in the reponse due to the interaction effect.

Bug fixes:
* Argument `ci.hyphen` in function `sjt.lm` and `sjt.lmer` was not correctly applied to confidence intervals of standardized beta values.


Version 1.8.4
-----------------------------------------------------------------------------
General:
* Improved encoding detection for `sjt`-functions.

Changes to functions:
* Predictor grouping with argument `group.pred` now also works for `sjt.lmer` and `sjt.glmer` (in certain cases may be buggy, so `group.pred` defaults to `FALSE`).
* Argument `vars` in `sjp.lmer` and `sjp.glmer` now also applies when plotting estimates (`type = "fe"` or `type = "re"`).
* `view_df` gets a `weightBy` argument.
* Argument `showCI` in `sjp.int` accepts numeric values for `type = "eff"`,  indicating the confidence interval value.
* Minor improvements to `view_df`, `sjp.lm` and `sjp.lmm`.
* Improved accuracy of computation of skewness value in `sjt.itemanalysis`.

Bug fixes:
* Fixed bug where in certain cases, ordered factors were not labelled correctly in `sjp.frq`.
* Value labels were not shown in `sjp.aov1`.
* Axis labels were reversed in `sjp.pca` for `type = "bar"`.

Version 1.8.3
-----------------------------------------------------------------------------
New functions:
* `sjp.gpt` to plot grouped proportional tables.
* `save_plot` as convenient function to save the last ggplot-figure in high quality for publication.

Changes to functions:
* `sjp.lmm` can now also plot standardized estimates.
* `sjp.lm`, `sjp.lmm` and `sjt.lm` can now plot standardized estimates, where standardization is computed following Gelman's approach by dividing estimates by two standard deviations.